# Finances

./: LICENSE  README.md  pyproject.toml
_data/indices/: IND_INDICES.xlsx  NIFTY 50_gainers.xlsx  NIFTY 50_losers.xlsx  NIFTY 50_stocks.xlsx  NIFTY FMCG_gainers.xlsx  NIFTY FMCG_losers.xlsx  NIFTY FMCG_stocks.xlsx  NIFTY IND DEFENCE_gainers.xlsx  NIFTY IND DEFENCE_losers.xlsx  NIFTY IND DEFENCE_stocks.xlsx  indices_quotes_path_gainers.xlsx  indices_quotes_path_losers.xlsx
_data/sectors/IND/: sector_data.csv
_examples/: README.md  alpha_finance.py  coffee_can_portfolio_screener.py  robinhood_transactions.py  yahoo_finance.py
_tools/: README.md  file_operations.py  fin_funcs.py  kucoin.py
data/: Cleaned_Transactions_Holdings_Statement_2024.xlsx  Groww_Balance_Statement_2024.xlsx  Stocks_Balance_Statement_2024.xlsx  Transactions_Holdings_Statement_2024.csv  robinhood_data.csv  robinhood_data.xlsx
data/indices/: NIFTY 100_gainers.xlsx  NIFTY 100_losers.xlsx  NIFTY 100_stocks.xlsx  NIFTY 500_gainers.xlsx  NIFTY 500_losers.xlsx  NIFTY 500_stocks.xlsx  NIFTY 50_gainers.xlsx  NIFTY 50_losers.xlsx  NIFTY 50_stocks.xlsx  NIFTY BANK_gainers.xlsx  NIFTY BANK_losers.xlsx  NIFTY BANK_stocks.xlsx  NIFTY FMCG_gainers.xlsx  NIFTY FMCG_losers.xlsx  NIFTY FMCG_stocks.xlsx  NIFTY MIDCAP 100_gainers.xlsx  NIFTY MIDCAP 100_losers.xlsx  NIFTY MIDCAP 100_stocks.xlsx
data/market/: market_status.xlsx
examples/: README.md  alpha_finance.py  coffee_can_portfolio_screener.py  ind_index.py  news.py
helper_funcs/: README.md  file_operations.py  other_funcs.py
(+105 files in other folders)
