[tool.poetry]
name = "finances"
version = "0.1.0"
description = "Who doesn't love money."
authors = ["5h1nch4nn <5h1nch4n@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
yfinance = "^0.2.51"
nsepython = "^2.94"
pandas = "^2.2.3"
gnews = "^0.3.9"
newsapi = "^0.1.1"
textblob = "^0.18.0.post0"
newspaper3k = "^0.2.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
